--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ function myFunction() {
 const text = document.querySelector('#text');
 const btn = document.querySelector('#btn');
 
-const str =  '" Hero Prova ❤ From the moment I met you, I knew you were the one for me. Will you do me the honor of being my partner for life?".';
+const str =  '" Hello Prova ❤ From the moment I met you, I knew you were the one for me. Will you do me the honor of being my partner for life?".';
 let i = 0;
 
 function autoType() {
